--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=aa3a441babe829715bacd429632f6ab8"></script>
     <title>农业AI大脑</title>
   </head>
   <body>
